# community-solutions

./: .dockerignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  TODO  cinit.yml  docker-compose.observability.yml  docker-compose.yml  mise.toml  redis.conf  sip.yml
backend/: .env.development  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  schema.graphql  schema.json
backend/answers/: models.py  pdf_utils.py  schema.py  section_util.py  urls.py  views.py  views_answers.py  views_comments.py  views_cuts.py  views_files.py  views_listings.py  views_search.py
backend/answers/migrations/: 0001_initial.py  0002_default_exam_types.py  0003_answersection_name.py  0004_answersection_hidden.py  0005_exampage_exampageflow_examword.py  0006_auto_20200602_1436.py  0007_analyze_exams.py  0008_trigram.py  0009_add_search_vector.py  0011_answersection_has_answers.py  (+9 more)
backend/backend/: debugging.py  settings.py  urls.py  views.py  wsgi.py
backend/categories/: models.py  schema.py  tests.py  urls.py  views.py
backend/documents/: api.py  models.py  tests.py  urls.py  views.py
backend/exams/: schema.py
backend/faq/: tests.py  urls.py  views.py
backend/feedback/: api.py  models.py  tests.py  urls.py  views.py
backend/filestore/: apps.py  models.py  tests.py  urls.py  views.py
backend/frontend/: urls.py  views.py
backend/health/: tests.py
backend/images/: api.py  models.py  tests.py  urls.py  util.py
backend/myauth/: apps.py  auth_backend.py  auth_check.py  models.py  schema.py  tests.py  views.py
backend/notifications/: models.py  notification_util.py  tests.py  urls.py  views.py
backend/payments/: models.py  tests.py  urls.py  views.py
backend/scoreboard/: apps.py  tests.py  urls.py  views.py
backend/testing/: tests.py  urls.py  views.py
backend/users/: api.py
backend/util/: ethprint.py  func_cache.py  instrumentation.py  middleware.py  models.py  rendersvg.py  response.py  s3_util.py  schemas.py
(+255 files in other folders)
