[project]
name = "community-solutions"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.14.3",
    "boto3==1.43.2",
    "django==4.2.30",
    "django-csp==3.8",
    "django-ninja>=1.5.3",
    "django-probes==1.8.0",
    "django-prometheus==2.4.1",
    "gevent==23.9.1",
    "gunicorn==20.1.0",
    "jwcrypto==1.5.7",
    "opentelemetry-exporter-otlp==1.41.1",
    "opentelemetry-instrumentation-django==0.57b0",
    "opentelemetry-instrumentation-psycopg2==0.57b0",
    "opentelemetry-sdk==1.41.1",
    "psycogreen==1.0.2",
    "psycopg2-binary==2.9.12",
    "pypdfium2>=5.5.0",
    "pyroscope-io==0.8.16; sys_platform != 'win32'",
    "pyroscope-otel==0.4.1 ; sys_platform != 'win32'",
    "pyyaml==6.0.3",
    "requests==2.33.1",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "tblib>=3.2.2",
]
