[project]
name = "community-solutions"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.15.0",
    "boto3==1.43.38",
    "django==5.2.15",
    "django-csp==4.0",
    "django-ninja>=1.5.3",
    "django-probes==1.8.0",
    "django-prometheus==2.5.0",
    "gevent==23.9.1",
    "gunicorn==20.1.0",
    "jwcrypto==1.5.8",
    "opentelemetry-exporter-otlp==1.43.0",
    "opentelemetry-instrumentation-django==0.57b0",
    "opentelemetry-instrumentation-psycopg2==0.57b0",
    "opentelemetry-sdk==1.43.0",
    "psycogreen==1.0.2",
    "psycopg2-binary==2.9.12",
    "pypdfium2>=5.5.0",
    "pyroscope-io==0.8.16; sys_platform != 'win32'",
    "pyroscope-otel==0.4.1 ; sys_platform != 'win32'",
    "pyyaml==6.0.3",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "ruff==0.15.17",
    "tblib>=3.2.2",
]

[tool.ruff]
line-length = 88
exclude = ["migrations"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
